--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Royals</title>
-  <meta name="Description" content="Welcome to the Royals website.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta http-equiv="x-ua-compatible" content="IE=Edge"/>
+  <head>
+    <meta charset="utf-8" />
+    <title>Royals</title>
+    <meta name="Description" content="Welcome to the Royals website." />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
+    />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta http-equiv="x-ua-compatible" content="IE=Edge" />
 
-  <link href="/build/app.css" rel="stylesheet">
-  <script src="/build/app.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Muli:400,700"
+      rel="stylesheet"
+    />
+    <link href="/build/app.css" rel="stylesheet" />
+    <script src="/build/app.js"></script>
 
-  <link rel="apple-touch-icon" href="/assets/icon/icon.png">
-  <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
-  <link rel="manifest" href="/manifest.json">
-</head>
-<body>
-
-  <royals-root></royals-root>
-
-</body>
+    <link rel="apple-touch-icon" href="/assets/icon/icon.png" />
+    <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico" />
+    <link rel="manifest" href="/manifest.json" />
+  </head>
+  <body>
+    <royals-root></royals-root>
+  </body>
 </html>
